fix vertical align on 'bullets', remove delay on personality, delete extra jquery

--- a/style.css
+++ b/style.css
@@ -82,8 +82,11 @@
   list-style-type: none;
 }
 
-.no-bullets li {
-  line-height: 2em;
+.no-bullets span {
+  line-height: 1.5em;
+}
+.no-bullets i {
+  font-size: 1.5em;
 }
 
 footer {
@@ -97,6 +100,8 @@ nav {
 .prettyFont {
   font-family: 'Permanent Marker', cursive;
 }
+
+
 
 @media (min-width: 1200px) { 
 
